--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Привет!!!</h1>
     <h2>Всем!!!</h2>
-    <h3>Группа 118!!!</h3>
+    <h3>Группа 118999999999999999999!!!</h3>
     <a href="https://git-scm.com/download/win">Ссылка</a>
     
 
